# FINTRA

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  prd.md  pyproject.toml  requirements.txt
bot/: __main__.py  config.py
bot/database/: connection.py  queries.py
bot/handlers/: admin.py  messages.py  user_commands.py
bot/services/: gemini_client.py  llm_client.py  rate_limiter.py  report.py
scripts/: backup_db.py  fintra.service
tests/: conftest.py  test_queries.py  test_rate_limiter.py
