[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fintra"
version = "1.6.0"
description = "Finance Tracker Telegram Bot — AI-powered personal finance logging"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot>=21.0,<22.0",
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
    "fpdf2>=2.8.0",
    "pytz>=2024.0",
    "apscheduler>=3.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
